Added navigation actions

--- a/app/views/locale_lab/translations/_navigation.html.erb
+++ b/app/views/locale_lab/translations/_navigation.html.erb
@@ -1,57 +1,56 @@
-<nav class="folder-navigation">
-    <ul class="folder-actions">
-      <% if navigation.parent_folder %>
-        <li class="folder-up">
-          <%= link_to locale_lab.translation_path(navigation.parent_folder), class: 'button icon-button icon-button-stroke' do %>
-            <svg width="10" height="15" xmlns="http://www.w3.org/2000/svg"><path d="m8.075 1.788-6 6 6 6" stroke-width="2" stroke-linecap="round"/></svg>
-            <%= t('.back') %>
-          <% end %>
-        </li>
-      <% else %>
-        <li class="folder-up">
-          <%= link_to locale_lab.root_path, class: 'button icon-button icon-button-stroke' do %>
-            <svg width="10" height="15" xmlns="http://www.w3.org/2000/svg"><path d="m8.075 1.788-6 6 6 6" stroke-width="2" stroke-linecap="round"/></svg>
-            <%= t('.back') %>
-          <% end %>
-        </li>
-      <% end %>
-
-      <li class="folder-dropdown">
-        <a href="#" class="button">navDropdown</a>
+<nav class="folder-navigation" data-controller="navigation">
+  <ul class="folder-actions">
+    <% if navigation.parent_folder %>
+      <li class="folder-up">
+        <%= link_to locale_lab.translation_path(navigation.parent_folder), class: 'button icon-button icon-button-stroke' do %>
+          <svg width="10" height="15" xmlns="http://www.w3.org/2000/svg"><path d="m8.075 1.788-6 6 6 6" stroke-width="2" stroke-linecap="round"/></svg>
+          <%= t('.back') %>
+        <% end %>
       </li>
+    <% else %>
+      <li class="folder-up">
+        <%= link_to locale_lab.root_path, class: 'button icon-button icon-button-stroke' do %>
+          <svg width="10" height="15" xmlns="http://www.w3.org/2000/svg"><path d="m8.075 1.788-6 6 6 6" stroke-width="2" stroke-linecap="round"/></svg>
+          <%= t('.back') %>
+        <% end %>
+      </li>
+    <% end %>
 
+    <li class="folder-dropdown">
+      <a href="#" class="button">navDropdown</a>
+    </li>
+
+    <% if navigation.path %>
       <li class="folder-move">
-        <a href="#" class="button icon-button">
+        <%= button_tag type: 'button', class: 'button icon-button', tabindex: '-1', data: { action: 'click->navigation#showMoveForm' } do %>
           <svg width="16" height="17" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10.62 2.323 3.55 9.394l3.181 3.182 7.071-7.071-3.182-3.182Z"/><path fill-rule="evenodd" clip-rule="evenodd" d="m1.605 14.52 1.238-4.418 3.18 3.18-4.418 1.238ZM13.424.944a1.008 1.008 0 0 0-1.426 0l-.701.701 3.182 3.182.7-.7A1.008 1.008 0 0 0 15.18 2.7L13.424.944Z"/></svg>
           Move
-        </a>
+        <% end %>
       </li>
 
       <li class="folder-duplicate">
-        <a href="#" class="button icon-button">
+        <%= button_tag type: 'button', class: 'button icon-button', tabindex: '-1', data: { action: 'click->navigation#showDuplicateForm' } do %>
           <svg width="19" height="19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.015.231h-6c-2.2 0-4 1.8-4 4-2.2 0-4 1.8-4 4v6c0 2.2 1.8 4 4 4h6c2.2 0 4-1.8 4-4 2.2 0 4-1.8 4-4v-6c0-2.2-1.8-4-4-4Zm-2 14c0 1.1-.9 2-2 2h-6c-1.1 0-2-.9-2-2v-6c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2v6Zm4-4c0 1.1-.9 2-2 2v-4c0-2.2-1.8-4-4-4h-4c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2v6Z" /><path d="M4.015 10.231h6v2h-6z"/><path d="M8.015 8.231v6h-2v-6z"/></svg>
           Dupe
-        </a>
+        <% end %>
       </li>
 
-      <% if navigation.path %>
-        <li class="folder-remove">
-          <%= button_to locale_lab.translation_path(navigation.path, is_folder: true),
-                        method: :delete,
-                        class: 'button icon-button',
-                        tabindex: '-1',
-                        form: {
-                          data: {
-                            turbo_method: :delete,
-                            turbo_confirm: t('.confirm_destroy_folder', folder: navigation.path)
-                          }
-                        } do %>
-            <svg width="17" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.268 3.2h-3.1L11.89 1.094c-.358-.535-.911-.863-1.543-.863H6.538c-.632 0-1.218.328-1.542.863L3.716 3.2h-3.1a.596.596 0 0 0-.601.594v.593c0 .33.268.594.602.594h.602v11.875c0 1.312 1.078 2.375 2.408 2.375h9.63c1.33 0 2.409-1.063 2.409-2.375V4.981h.602a.595.595 0 0 0 .602-.594v-.593a.596.596 0 0 0-.602-.594ZM6.482 2.12a.224.224 0 0 1 .192-.108h3.536c.08 0 .156.042.193.107l.658 1.08-5.237.001.658-1.08Zm6.776 15.33H3.627a.598.598 0 0 1-.602-.594V4.981H13.86v11.875a.6.6 0 0 1-.602.594Zm-4.816-1.781a.598.598 0 0 0 .602-.594V7.356a.598.598 0 0 0-.602-.594.599.599 0 0 0-.602.594v7.719a.6.6 0 0 0 .602.594Zm-3.01 0a.6.6 0 0 0 .602-.594V7.356a.598.598 0 0 0-.602-.594.599.599 0 0 0-.602.594v7.719a.6.6 0 0 0 .602.594Zm6.02 0a.598.598 0 0 0 .602-.594V7.356a.598.598 0 0 0-.602-.594.599.599 0 0 0-.602.594v7.719a.6.6 0 0 0 .602.594Z"/></svg>
-            <%= t('.destroy_folder') %>
-          <% end %>
-        </li>
-      <% end %>
-    </ul>
+      <li class="folder-remove">
+        <%= button_to locale_lab.translation_path(navigation.path, is_folder: true),
+                      method: :delete,
+                      class: 'button icon-button',
+                      tabindex: '-1',
+                      form: {
+                        data: {
+                          turbo_method: :delete,
+                          turbo_confirm: t('.confirm_destroy_folder', folder: navigation.path)
+                        }
+                      } do %>
+          <svg width="17" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.268 3.2h-3.1L11.89 1.094c-.358-.535-.911-.863-1.543-.863H6.538c-.632 0-1.218.328-1.542.863L3.716 3.2h-3.1a.596.596 0 0 0-.601.594v.593c0 .33.268.594.602.594h.602v11.875c0 1.312 1.078 2.375 2.408 2.375h9.63c1.33 0 2.409-1.063 2.409-2.375V4.981h.602a.595.595 0 0 0 .602-.594v-.593a.596.596 0 0 0-.602-.594ZM6.482 2.12a.224.224 0 0 1 .192-.108h3.536c.08 0 .156.042.193.107l.658 1.08-5.237.001.658-1.08Zm6.776 15.33H3.627a.598.598 0 0 1-.602-.594V4.981H13.86v11.875a.6.6 0 0 1-.602.594Zm-4.816-1.781a.598.598 0 0 0 .602-.594V7.356a.598.598 0 0 0-.602-.594.599.599 0 0 0-.602.594v7.719a.6.6 0 0 0 .602.594Zm-3.01 0a.6.6 0 0 0 .602-.594V7.356a.598.598 0 0 0-.602-.594.599.599 0 0 0-.602.594v7.719a.6.6 0 0 0 .602.594Zm6.02 0a.598.598 0 0 0 .602-.594V7.356a.598.598 0 0 0-.602-.594.599.599 0 0 0-.602.594v7.719a.6.6 0 0 0 .602.594Z"/></svg>
+          <%= t('.destroy_folder') %>
+        <% end %>
+      </li>
+    <% end %>
   </ul>
 
   <ul class="folder-items">
@@ -78,4 +77,38 @@
       </li>
     <% end %>
   </ul>
+
+<% if navigation.path %>
+  <% navigation_path_id = navigation.path.gsub('.', '_') %>
+
+  <dialog data-navigation-target="duplicateForm">
+    <%= form_with url: locale_lab.duplicate_translation_path(navigation.path, is_folder: true), method: :put do |f| %>
+      <%= t('.duplicate') %>
+      <%=
+        f.text_field :new_id, value: "#{navigation.path}_copy",
+                     id:    "duplicate_#{navigation_path_id}_input",
+                     style: 'width: 500px;'
+      %>
+      <%= f.submit %>
+      <%= f.button t('.discard'), class: 'button secondary-button', type: 'button', data: { action: 'click->navigation#hideDuplicateForm' } %>
+    <% end %>
+  </dialog>
+
+  <dialog data-navigation-target="moveForm">
+    <%= form_with url: locale_lab.move_translation_path(navigation.path, is_folder: true), method: :put do |f| %>
+      <%= t('.move') %>
+      <%=
+        f.text_field :new_id, value: navigation.path,
+                     id:    "rename_#{navigation_path_id}_input",
+                     style: 'width: 500px;',
+                     data: {
+                       translation_key_target: 'input'
+                     }
+      %>
+      <%= f.submit %>
+      <%= f.button t('.discard'), class: 'button secondary-button', type: 'button', data: { action: 'click->navigation#hideMoveForm' } %>
+    <% end %>
+  </dialog>
+<% end %>
+
 </nav>
