--- a/app/assets/stylesheets/locale_lab/setup/outlines.css
+++ b/app/assets/stylesheets/locale_lab/setup/outlines.css
@@ -5,7 +5,7 @@ body {
   font-family: var(--text-body-fontFamily);
 }
 
-a:not(.button) {
+a:not(.button, .dropdown-button-button) {
   color: var(--fgColor-default);
 
   &:hover {
