Moved `browser` to helper

--- a/app/views/locale_lab/translations/show.html.erb
+++ b/app/views/locale_lab/translations/show.html.erb
@@ -1,5 +1,5 @@
 <%=
-  render 'shared/locale_lab/sidebar', navigation: @browser, path: @navigation.path
+  render 'shared/locale_lab/sidebar', navigation: browser, path: @navigation.path
 %>
 
 <div class="content">
