--- a/app/views/shared/locale_lab/_sidebar.html.erb
+++ b/app/views/shared/locale_lab/_sidebar.html.erb
@@ -2,6 +2,6 @@
   <%= render 'locale_lab/shared/current_application' %>
 
   <%=
-    render 'locale_lab/translations/navigation', navigation: @browser, path: nil
+    render 'locale_lab/translations/navigation', navigation: browser, path: nil
   %>
 </div>
