--- a/app/views/locale_lab/dashboard/show.html.erb
+++ b/app/views/locale_lab/dashboard/show.html.erb
@@ -1,5 +1,5 @@
 <%=
-  render 'shared/locale_lab/sidebar', navigation: @browser, path: nil
+  render 'shared/locale_lab/sidebar', navigation: browser, path: nil
 %>
 
 <div class="content">
