Use `locales` method

--- a/app/views/locale_lab/dashboard/show.html.erb
+++ b/app/views/locale_lab/dashboard/show.html.erb
@@ -13,7 +13,7 @@
     <% end %>
   </ul>
   <p>
-    <%= t '.available_locales_html', locales: @locales.to_sentence %>
+    <%= t '.available_locales_html', locales: locales.to_sentence %>
   </p>
 
   <% if @incomplete.present? %>
