Include keys in the current folder

--- a/app/views/locale_lab/translations/_navigation.html.erb
+++ b/app/views/locale_lab/translations/_navigation.html.erb
@@ -100,7 +100,7 @@
       </li>
     <% end %>
 
-    <% keys.each do |key| %>
+    <% keys(with_current_folder: true).each do |key| %>
       <%
         label = key.split('.').last
         label = content_tag(:strong, label) if key == local_assigns[:path]
