--- a/app/views/locale_lab/translations/_navigation_overview.html.erb
+++ b/app/views/locale_lab/translations/_navigation_overview.html.erb
@@ -13,7 +13,7 @@
       <dialog data-header-target="newTranslationDialog">
         <%= form_with url: locale_lab.translations_path, method: :post, data: { turbo_frame: '_top' } do |f| %>
           <%= f.label      :path, t('.path')   %>
-          <%= f.text_field :path, value: @path %>
+          <%= f.text_field :path, value: current_path, data: { header_target: 'input' } %>
 
           <%= f.submit t('.create') %>
           <%= f.button t('.discard'), class: 'button secondary-button', type: 'button', data: { action: 'click->header#hideCreateForm' } %>
