Added flash partial

--- a/app/views/layouts/locale_lab/application.html.erb
+++ b/app/views/layouts/locale_lab/application.html.erb
@@ -12,6 +12,7 @@
 
   <div class="container">
     <div class="wrapper flex-wrapper">
+      <%= render 'locale_lab/shared/flash' %>
       <%= yield %>
     </div>
   </div>
