Redirect with a flash error when trying to create a translation that already exists

--- a/app/views/locale_lab/translations/_navigation_overview.html.erb
+++ b/app/views/locale_lab/translations/_navigation_overview.html.erb
@@ -14,7 +14,8 @@
         <%= form_with url: locale_lab.translations_path, method: :post, data: { turbo_frame: '_top' } do |f| %>
           <%= f.label      :path, t('.path')   %>
           <%= f.text_field :path, value: current_path, data: { header_target: 'input' } %>
-
+          <%= f.label      :force, t('.force') %>
+          <%= f.check_box  :force %>
           <%= f.submit t('.create') %>
           <%= f.button t('.discard'), class: 'button secondary-button', type: 'button', data: { action: 'click->header#hideCreateForm' } %>
         <% end %>
