Render error flash inside `newTranslationDialog`, return the error partial with turbo

--- a/app/views/locale_lab/shared/_flash.html.erb
+++ b/app/views/locale_lab/shared/_flash.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag 'flash' do %>
   <% if flash[:error].present? %>
-    <div style="color: red; width: 100%; margin-top: 40px;">
+    <div style="color: red">
       <%= flash[:error] %>
     </div>
   <% end %>
