--- a/app/views/locale_lab/translations/_translations_with_key.html.erb
+++ b/app/views/locale_lab/translations/_translations_with_key.html.erb
@@ -12,9 +12,9 @@ current = parts.pop
         <span>.</span>
       <% end %>
       <strong><%= current %></strong>
-      <%= link_to "#rename_#{key_id}_input", 
-                  class: 'button icon-button', 
-                  tabindex: '-1', 
+      <%= link_to "#rename_#{key_id}_input",
+                  class: 'button icon-button',
+                  tabindex: '-1',
                   data: { action: 'translation-key#copyKeyToClipboard' } do %>
         <svg width="18" height="19" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M14 .233H8c-2.2 0-4 1.8-4 4-2.2 0-4 1.8-4 4v6c0 2.2 1.8 4 4 4h6c2.2 0 4-1.8 4-4 2.2 0 4-1.8 4-4v-6c0-2.2-1.8-4-4-4Zm-2 14c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2v-6c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2v6Zm4-4c0 1.1-.9 2-2 2v-4c0-2.2-1.8-4-4-4H6c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2v6Z"/>
@@ -40,10 +40,10 @@ current = parts.pop
         </li>
 
         <li>
-          <%= button_to locale_lab.translation_path(key), 
-                        method: :delete, 
-                        class: 'button icon-button', 
-                        tabindex: '-1', 
+          <%= button_to locale_lab.translation_path(key),
+                        method: :delete,
+                        class: 'button icon-button',
+                        tabindex: '-1',
                         form: {
                           data: {
                             turbo_method: :delete,
@@ -60,7 +60,8 @@ current = parts.pop
 
 
   <dialog data-translation-key-target="moveForm">
-    <%= form_with url: locale_lab.move_translation_path(key), method: :put do |f| %>
+    <%= render 'locale_lab/translations/dialog_flash' %>
+    <%= form_with url: locale_lab.move_translation_path(key), method: :put, data: { turbo_frame: '_top' } do |f| %>
       <%= t('.move') %>
       <%=
         f.text_field :new_id, value: key,
@@ -70,19 +71,24 @@ current = parts.pop
                        translation_key_target: 'input'
                      }
       %>
+      <%= f.label      :force,  t('.force') %>
+      <%= f.check_box  :force %>
       <%= f.submit %>
       <%= f.button t('.discard'), class: 'button secondary-button', type: 'button', data: { action: 'click->translation-key#hideMoveForm' } %>
     <% end %>
   </dialog>
 
   <dialog data-translation-key-target="duplicateForm">
-    <%= form_with url: locale_lab.duplicate_translation_path(key), method: :put do |f| %>
+    <%= render 'locale_lab/translations/dialog_flash' %>
+    <%= form_with url: locale_lab.duplicate_translation_path(key), method: :put, data: { turbo_frame: '_top' } do |f| %>
       <%= t('.duplicate') %>
       <%=
         f.text_field :new_id, value: "#{key}_copy",
                      id:    "duplicate_#{key_id}_input",
                      style: 'width: 500px;'
       %>
+      <%= f.label      :force,  t('.force') %>
+      <%= f.check_box  :force %>
       <%= f.submit %>
       <%= f.button t('.discard'), class: 'button secondary-button', type: 'button', data: { action: 'click->translation-key#hideDuplicateForm' } %>
     <% end %>
