--- a/app/views/locale_lab/translations/_navigation_overview.html.erb
+++ b/app/views/locale_lab/translations/_navigation_overview.html.erb
@@ -40,7 +40,7 @@
                   button_tag yaml[:locale].upcase, type: 'button', class: 'button secondary-button', data: {
                     controller:         'yaml',
                     yaml_yaml_value:    yaml[:content],
-                    yaml_action_value:  locale_lab.yaml_translation_path(@navigation.path),
+                    yaml_action_value:  locale_lab.yaml_translation_path(@navigation.path, content_type: 'yaml'),
                     yaml_locale_value:  yaml[:locale],
                     yaml_editor_outlet: '.editor',
                     action:             'click->yaml#editInEditor'
