Moved `yaml` method to helper and class

--- a/app/views/locale_lab/translations/_navigation_overview.html.erb
+++ b/app/views/locale_lab/translations/_navigation_overview.html.erb
@@ -34,7 +34,7 @@
         <li>
           <ul>
             <!--- TODO: This should become a dropdown -->
-            <% @yamls.each do |yaml| %>
+            <% yamls.each do |yaml| %>
               <li>
                 <%=
                   button_tag yaml[:locale].upcase, type: 'button', class: 'button secondary-button', data: {
