--- a/app/views/locale_lab/translations/show.html.erb
+++ b/app/views/locale_lab/translations/show.html.erb
@@ -5,18 +5,11 @@
 <div class="content">
   <div class="key-overview">
     <%= render 'navigation_overview' %>
-
     <% if translations.present? %>
-      <ul>
-        <% translations.each do |key, translations| %>
-          <%=
-            render 'translations_with_key',
-              key:          key,
-              translations: translations
-          %>
-        <% end %>
+      <ul id="translations-list">
+        <%= render 'translations' %>
       </ul>
-    <% end %>
+   <% end %>
   </div>
 </div>
 
