Add classes to dialog buttons

--- a/app/views/locale_lab/translations/_navigation.html.erb
+++ b/app/views/locale_lab/translations/_navigation.html.erb
@@ -130,7 +130,7 @@
       %>
       <%= f.label      :force,  t('.force') %>
       <%= f.check_box  :force %>
-      <%= f.submit %>
+      <%= f.submit(class: 'button primary-button') %>
       <%= f.button t('.discard'), class: 'button secondary-button', type: 'button', data: { action: 'click->navigation#hideDuplicateForm' } %>
     <% end %>
   </dialog>
@@ -149,7 +149,7 @@
       %>
       <%= f.label      :force,  t('.force') %>
       <%= f.check_box  :force %>
-      <%= f.submit %>
+      <%= f.submit(class: 'button primary-button') %>
       <%= f.button t('.discard'), class: 'button secondary-button', type: 'button', data: { action: 'click->navigation#hideMoveForm' } %>
     <% end %>
   </dialog>
