Removed `search` controller method, `show` can now handle a search param

--- a/app/views/locale_lab/translations/_navigation_overview.html.erb
+++ b/app/views/locale_lab/translations/_navigation_overview.html.erb
@@ -23,7 +23,7 @@
       </dialog>
 
       <li>
-        <%= form_with url: locale_lab.search_path, method: :get, data: { turbo_frame: '_top' } do |form| %>
+        <%= form_with url: locale_lab.translation_path, method: :get, data: { turbo_frame: '_top' } do |form| %>
           <%= form.hidden_field :id, value: params[:id] %>
           <%= form.search_field :search, value: params[:search] %>
           <%= form.submit t('.search') %>
