Include `navigation_overview` in dashboard

--- a/app/views/locale_lab/dashboard/show.html.erb
+++ b/app/views/locale_lab/dashboard/show.html.erb
@@ -3,6 +3,8 @@
 %>
 
 <div class="content">
+  <%= render 'locale_lab/translations/navigation_overview' %>
+
   <h2><%= t '.files' %></h2>
   <ul>
     <% @files.each do |file| %>
